# tripman

./: .dockerignore  .editorconfig  .gcloudignore  .gitignore  CHECKS  Dockerfile  Pipfile  Procfile  README.md  app.yaml  develop.env  manage.py  pyproject.toml  requirements.txt
.github/workflows/: close-pull-request.yml  main.yml  pull-request.yml
main/: admin.py  admin_filters.py  apps.py  models.py
main/migrations/: 0001_initial.py  0002_auto_20200411_2252.py  0003_auto_20200412_1203.py  0004_tripdefinition_location.py  0005_auto_20200412_1210.py  0006_auto_20200418_1020.py  0007_auto_20200418_1203.py  0008_auto_20200418_1406.py  0009_excursion.py  0010_tripdefinition_created_by.py  0011_city.py  0012_hotel.py  0013_remove_tripdefinition_location.py  0014_client_total_saved.py  0015_alter_trip_sell_date.py  0016_excursion_times_included.py  0017_excursion_times_visited.py  0018_create_superuser.py
main/models/: __init__.py  city_model.py  client_model.py  excursion_model.py  hotel_model.py  service_model.py  trip_definition_model.py  trip_model.py
main/sql/: random_trip_definition.sql
main/sql/triggers/: calculate_trip_price.sql  increase_excursion_times_visited.sql  set_today_as_sell_date.sql  update_total_saved.sql
main/sql/triggers/excursion_times_included/: decrease_excursion_times_included.sql  increase_excursion_times_included.sql
main/templates/admin/: tripman_index.html
scripts/: create_branch_secrets.py
tripman/: asgi.py  gcloud_secrets.py  health.py  settings.py  urls.py  warmup.py  wsgi.py
