[tool.poetry]
name = "tripman"
version = "0.1.0"
description = ""
authors = ["Dima Krutolianov <DimaKrutDK@ya.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.6"
django = "3.2"
dj-database-url = "0.5.0"
django-admin-rangefilter = "0.8.1"
django-dbbackup = "3.3.0"
django-sql-explorer = "2.1.2"
mysqlclient = "2.0.3"
django-admin-actions = "0.1.1"
django-environ = "0.4.5"
gunicorn = "20.1.0"
whitenoise = "6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
